2016-10-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_var.c (nasl_get_var_by_num): Add lexic context to
	nasl_perror() call.
	(get_array_elem): Adjust nasl_get_var_by_num() call.

	* nasl/nasl_var.h: Adjust function header.

	* nasl/nasl_misc_funcs.c (nasl_make_list, nasl_make_array, nasl_keys)
	(nasl_make_index, nasl_typeof): Adjust nasl_get_var_by_num() call.


2016-10-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/gpgme_util.c (openvas_init_gpgme_ctx): Fix memory leak.
	(set_gpghome): New function.
	(get_sysconf_gpghome): Adjust to use value set by set_gpghome() call.
	(openvas_init_gpgme_sysconf_ctx): Fix memory leak.

	* base/gpgme_util.h: Add function header.

2016-10-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/gpgme_util.c (get_sysconf_gpghome): Take OPENVAS_GPGHOME
	environment variable into consideration. Patch by Jan-Oliver Wagner.

2016-10-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (hmac_sha384, nasl_prf, nasl_prf_sha384): New
	functions.
	(prf_sha256): Rename to tls_prf(). Add hmac parameter.
	(nasl_prf_sha256): Call nasl_prf().

	* nasl/nasl_crypto.h: Add function header.

	* nasl/nasl_init.c (libfuncs): Add prf_sha384().

2016-10-04  Christian Fischer <christian.fischer@greenbone.net>

	* nasl/nasl_builtin_find_service.c:
	Corrected registration of rsync service to match
	the service name defined by IANA.

2016-09-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto2.c (encrypt_data): Handle GCRY_CIPHER_3DES case.
	Fix used variable for data.
	(nasl_des_ede_cbc_encrypt): New function.

	* nasl/nasl_crypto2.h: Add new function header.

	* nasl/nasl_init.c (libfuncs): Add des_ede_cbc_encrypt().

2016-09-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto2.c (encrypt_data): Handle GCRY_CIPHER_AES256 case.
	Fix used variable for data.
	(nasl_aes256_cbc_encrypt): New function.

	* nasl/nasl_crypto2.h: Add new function header.
